<resources>
    <string name="app_name">Vicodart Contacts</string>

    <string name="nom">Nom</string>

    <string name="prenom">Prenom</string>

    <string name="sexe">Sexe</string>

    <string name="num">Numero</string>

    <string name="msgh">Ecrivez votre message</string>

    <string name="email">Email</string>

    <string name="facebook">Facebook</string>

    <string name="ajouter">Enregistrer</string>

    <string name="envoyer">Envoyer</string>

    <string name="titre">Ajouter Contacts</string>

    <string name="np">Ajouter Contacts</string>

    <string name="numo">Ajouter Contacts</string>

    <string name="em">Ajouter Contacts</string>

    <string name="fac">Ajouter Contacts</string>


    <string name="ti"></string>

    <string-array name="sexesm">
        <item>Masculin</item>
        <item>Feminin</item>
    </string-array>

</resources>