<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterContact">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="95dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nom"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/titre"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/titre"
            android:textColor="@color/design_default_color_primary_dark"/>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/prenom"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/sexe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="185dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/sexe"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/num"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:autofillHints=""
            android:hint="@string/email"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="320dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:hint="@string/facebook"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="410dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/ajouter" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>