<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addcont">



    <RelativeLayout
        android:background="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <EditText
            android:id="@+id/ednom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="95dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nom"
            android:autofillHints=""
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/edprenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="140dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/prenom"
            android:autofillHints=""
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="23dp"
            android:text="@string/titre"
            android:textColor="@color/teal_700"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edsexe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="185dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/sexe"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/ednum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/num"
            android:autofillHints=""
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/btnadd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="650dp"
            android:shadowColor="@color/purple_500"
            android:text="@string/ajouter"
            android:textColor="@color/teal_700" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>