<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boxsms">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/numoiu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:inputType="textWebEditText"
        android:visibility="invisible"
        android:hint="@string/sexe"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/meg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:inputType="textPersonName|textLongMessage"
        android:hint="@string/msgh"
        android:autofillHints=""
        tools:ignore="LabelFor" />

        <Button
            android:id="@+id/Envoyer"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/meg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/envoyer" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>